# typingkit

./: README.md  USAGE.md  pyproject.toml
src/typed_numpy/_typed/: _debug.py  context.py  debug.py  dimexpr.py  factory.py  generics.py  helpers.py  list.py  ndarray.py
src/typingkit/: __init__.py  mypy_plugin.py
src/typingkit/_typed/: __init__.py  _debug.py  context.py  dimexpr.py  factory.py  generics.py  helpers.py  list.py  ndarray.py
src/typingkit/core/: __init__.py  _config.py  _debug.py  _options.py  _validators.py  dict.py  generics.py  list.py  mapping.py  sequence.py
src/typingkit/numpy/: __init__.py
src/typingkit/numpy/_typed/: __init__.py  context.py  dimexpr.py  factory.py  helpers.py  ndarray.py
tests/: test_dict_1.py  test_dict_2.py  test_generics_1.py  test_generics_2.py  test_generics_3.py  test_generics_4.py  test_list_1.py  test_list_2.py  test_ndarray.py  test_ndarray_1.py  test_ndarray_2.py  test_ndarray_3.py
tests/mypy_plugin/: test_mypy_plugin_expected.py  test_mypy_plugin_logic.py
