[project]
name = "typingkit"
version = "0.2.8"
description = "Python strong typing suite, along with Typed NumPy: Static shape typing and runtime shape validation."
readme = "README.md"
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
requires-python = ">=3.13"
dependencies = ["numpy>=2.2"]

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["rich>=15.0.0"]
test = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
lint = ["ruff>=0.15.10"]
typecheck = [
    "basedpyright>=1.39.0",
    "mypy[mypyc]>=1.20.1",
    "pyrefly>=0.61.0",
    "pyright>=1.1.408",
    "ty>=0.0.30",
    "zuban>=0.7.0",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.mypy]
enable_incomplete_feature = ["TypeForm"]
plugins = ["typingkit.mypy_plugin"]

[tool.pytest.ini_options]
norecursedirs = ["tests/mypy_plugin"]

[tool.uv]
default-groups = "all"
