[project]
name = "typingkit"
version = "0.2.8"
description = "Python strong typing suite, along with Typed NumPy: Static shape typing and runtime shape validation."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
dependencies = ["numpy>=2.2"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["rich>=15.0.0"]
lint = ["ruff>=0.15.11"]
test = ["pytest>=9.0.3", "pytest-memray>=1.8.0"]
typecheck = [
    "basedpyright>=1.39.3",
    "mypy[mypyc]>=1.20.2",
    "pycroscope>=0.3.0",
    "pyrefly>=0.62.0",
    "pyright>=1.1.409",
    "ty>=0.0.32",
    "zuban>=0.7.0",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.mypy]
enable_incomplete_feature = ["TypeForm"]
plugins = ["typingkit.mypy_plugin"]

[tool.pytest.ini_options]
norecursedirs = ["tests/mypy_plugin"]

[tool.uv]
default-groups = "all"
