[project]
name = "typingkit"
version = "0.2.8"
description = "Python strong typing suite, along with Typed NumPy: Static shape typing and runtime shape validation."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Ashrith Sagar", email = "ashrith9sagar@gmail.com" }]
dependencies = ["numpy>=2.2"]

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["rich>=15.0.0"]
lint = ["ruff>=0.15.18"]
test = ["pytest>=9.1.1", "pytest-memray>=1.8.0"]
typecheck = [
    "basedpyright>=1.39.8",
    "mypy[mypyc]>=2.1.0",
    "pycroscope>=0.4.0",
    "pyrefly>=1.1.1",
    "pyright>=1.1.410",
    "ty>=0.0.52",
    "zuban>=0.8.2",
]

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
reportUnusedCallResult = false
reportUnusedParameter = false

[tool.mypy]
enable_incomplete_feature = ["TypeForm"]
plugins = ["typingkit.mypy_plugin"]

[tool.pytest.ini_options]
norecursedirs = ["tests/mypy_plugin"]

[tool.uv]
default-groups = "all"
